add content to html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <title>Beep Boop</title>
   </head>
   <body>
-
+    <div class="container">
+      <h1>This is a Beep Boop game!</h1>
+      <form id="userInput">
+        <div class="form-group">
+          <label for="userNumber">Please enter you number and watch what happened!</label>
+          <input id="userNumber" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
+      <div class="result">
+        <h2 id="gameResult"></h2>
+      </div>
+    </div>
   </body>
 </html>
