add styling to styles.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>This is a Beep Boop game!</h1>
+      <div class="jumbotron">
+        <h1>This is a Beep Boop game!</h1>
+      </div>
       <form id="userInput">
         <div class="form-group">
           <label for="userNumber">Please enter you number and watch what happened!</label>
@@ -18,8 +20,9 @@
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
-      <div class="result">
-        <h2 id="gameResult"></h2>
+      <div class="display">
+        <img src="img/boom.jpg" alt="picture saying boom">
+        <p><span class="gameResult"></span>
       </div>
     </div>
   </body>
