add label for user name in html and inside js put it to variable and as function parameter

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       </div>
       <form id="userInput">
         <div class="form-group">
+          <label for="userName">Please enter you name:</label>
+          <input id="userName" class="form-control" type="text">
+        </div>
+        <div class="form-group">
           <label for="userNumber">Please enter you number and watch what happened!</label>
           <input id="userNumber" class="form-control" type="text">
         </div>
